# media-management-system

./: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
legacy/: BUSINESS SORT RULES.docx  EmberQuestions1.docx
legacy/access_v1_2026-01-06/: README.md
legacy/access_v1_2026-01-06/exports/: TableExplainer.txt  Vinyl.xlsx  tblBinSnapshot.xlsx  tblSettings.xlsx  tblSortBuckets.xlsx  tblVinylTag.xlsx
legacy/access_v1_2026-01-06/forms/: Form_Vinyl Administration.cls  Form_frmRebinTaskList.cls  Form_sfrmVinylTags.cls
legacy/access_v1_2026-01-06/reports/: Report_rptSortingReport.cls
legacy/access_v1_2026-01-06/vba/: VBAExplainer.txt  modAlphaBucket.bas  modBulkUpload.bas  modHelpers.bas  modLogging.bas  modVinylHelpers.bas  mod_OneTime_VBA_Export.bas
reference/access_v1_export/completeMediaManagementSystem/: ChangeLog.xlsx  Form_LoadForm.cls  Report_rptTagReport_NewAdditions.cls  modTagging.bas  tblArtistLocation.xlsx  tblBulkUpload.xlsx  tblMediaType.xlsx  tblRebinBaseline.xlsx  tblShelfBin.xlsx  tblTagging.xlsx
scripts/: render_predeploy.sh
src/catalog/: __init__.py  admin.py  apps.py  models.py  signals.py  urls.py  views.py  views_reports.py
src/catalog/migrations/: 0001_initial.py  0002_storagezone_mediatype_mediaitem.py  0003_logicalbin_physicalbin_binmapping_and_more.py  0004_mediaitem_logical_bin.py  0005_sortbucket_mediaitem_bucket.py  0006_bucketbinrange.py  0007_alter_artist_options_mediaitem_owner.py  (+17 more)
src/config/: settings.py
src/scripts/: render_predeploy.sh  render_start.sh
(+27 files in other folders)
