[tool.poetry]
name = "media-management-system"
version = "0.1.0"
description = "Media Management System"
authors = ["Mike <mike@example.com>"]
package-mode = false
[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0"
psycopg = {extras = ["binary"], version = "^3.3.2"}
pandas = "^2.3.3"
openpyxl = "^3.1.5"
python-dotenv = "^1.2.1"
gunicorn = "^23.0.0"
django-extensions = "^4.1"
